<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="development.sai.podiocalendar.fragments.SplashScreenFragment"
    android:background="@drawable/loginimage">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_icon"
        android:gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/appIcon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_below="@+id/appIcon"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:id="@+id/appNameTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_caption"
        android:layout_below="@+id/appNameTextView"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/splashScreenTextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strStartUsingCalendar"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:id="@+id/startUsingCalendarButton"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSwitchUser"
                android:background="@color/white"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:id="@+id/switchUserButton"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSignIn"
                android:background="@color/white"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:id="@+id/signInButton"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
